--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,6 +18,7 @@
             <a href="/" style="text-decoration: none;">
                 <h1>CASA MALEWO</h1>
             </a>
+            
             <% if (locals.isLogged) { %>                
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropUser" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -35,7 +36,14 @@
                     <i class="fas fa-shopping-bag"></i>
                 </a>
             </div>
-            <% } %>
+            <% } else { %>
+                <div class="carrito">
+                <a href="/compras">
+                    <i class="fas fa-shopping-bag"></i>
+                </a>
+            </div>
+
+          <%  } %>
            
         </div>
         <div class="inicio-sesion">
